feat: add live simulation, SSE stream, and DB-backed route graph